internal/buf/cmd/buf/testdata/workspace/fail/diroverlap/buf.work
version: v1
directories:
  - foo
  - foo/bar
